force-app/main/default/objects/Revenue_Plan_Resource__c/Revenue_Plan_Resource__c.object-meta.xml
<CustomObject>
    <label>Revenue Plan Resource</label>
    <nameField>
        <label>Plan Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Plan Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>