force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Actual_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billable_Hours__c</fullName>
    <label>Actual Billable Hours</label>
    <summarizedField>Service_Revenue_Line__c.Actual_Billable_Hours__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Line__c.Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>