force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>Available_Hours__c</fullName>
    <formula>Billable_Hours_Capacity__c - Expected_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>