force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Average_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Billing_Rate__c</fullName>
    <formula>IF(ISPICKVAL(Revenue_Plan__r.Status__c,&#39;Closed&#39;), 
Resource_Actual_Revenue__c / Actual_Billable_Hours__c,
Resource_Expected_Revenue__c / Expected_Billable_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>