force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Billable_Hours_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Capacity__c</fullName>
    <label>Billable Hours Capacity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>