force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Expected_Utilization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Utilization_Rate__c</fullName>
    <formula>IF(Billable_Hours_Capacity__c &gt; 0, Expected_Billable_Hours__c /  Billable_Hours_Capacity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Utilization Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>