force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Fixed_Fee_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Revenue__c</fullName>
    <label>Fixed Fee Revenue</label>
    <summarizedField>Service_Revenue_Line__c.Fixed_Fee__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Line__c.Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>