force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Revenue Plan Resources</relationshipLabel>
    <relationshipName>Revenue_Plan_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>