force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Resource_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Resource_Actual_Revenue__c</fullName>
    <label>Resource Actual Revenue</label>
    <summarizedField>Service_Revenue_Line__c.Actual_Revenue__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Line__c.Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>