force-app/main/default/objects/Revenue_Plan_Resource__c/fields/Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Plan__c</fullName>
    <label>Revenue Plan</label>
    <referenceTo>Revenue_Plan__c</referenceTo>
    <relationshipLabel>Revenue Plan Resources</relationshipLabel>
    <relationshipName>Revenue_Plan_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>